Bug 298424 - kget doesnt use translated strings
Summary: kget doesnt use translated strings
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: Core (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-19 16:29 UTC by
Modified: 2013-07-01 22:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description 2012-04-19 16:29:29 UTC
I use to use kde in my native language, but if i start kget in english then it will list 2 entries of "My Downloads",  one in english and another in my native language, when it should list a single entry.


Reproducible: Always

Steps to Reproduce:
Already explained
Actual Results:  
Already explained

Expected Results:  
When running kget in english should not list the entry "My Downloads" duplicated (being one translated).
Comment 1 Burkhard Lück 2012-04-20 05:17:23 UTC
That is one of the notorious OTT's (One Time Translation).

Every time you start kget in a new language, it adds the translation of "My Downloads" to .kde/share/apps/kget/transfers.kgt
Comment 2 Lukas Appelhans 2013-07-01 22:39:33 UTC
Git commit eb73441a734508ea2adde02747ccecb0f94d4aa4 by Lukas Appelhans.
Committed on 02/07/2013 at 00:38.
Pushed by lappelhans into branch 'master'.

Only require one download group to be there, not one specific

M  +1    -8    conf/transfersgroupwidget.cpp
M  +9    -12   core/kget.cpp
M  +1    -1    core/kget.h
M  +2    -0    core/transfertreemodel.cpp
M  +2    -3    mainwindow.cpp
M  +2    -3    ui/contextmenu.cpp

http://commits.kde.org/kget/eb73441a734508ea2adde02747ccecb0f94d4aa4