Only require one download group to be there, not one specific

BUG:298424